Integrate Netlify Identity for user authentication
Added Netlify Identity Widget script and handler.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veo 3 Prompt Portfolio</title>
+    <!-- Include Netlify Identity Widget -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
         :root {
             --bg-color: #ffffff;
@@ -223,6 +225,17 @@
 </div>
 
 <script>
+    // Netlify Identity Handler
+    if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+            if (!user) {
+                window.netlifyIdentity.on("login", () => {
+                    document.location.href = "/admin/";
+                });
+            }
+        });
+    }
+
     // App Logic
     const gallery = document.getElementById('gallery');
     const modal = document.getElementById('modal');
